@@ -1,5 +1,14 @@
 2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	Remove sys-pkg.lisp and axext_l.lisp.
+	* src/interp/axext_l.lisp: remove, move content to
+	src/interp/foam_l.lisp
+	src/interp/sys-pkg.lisp: remove.
+	src/interp/Makefile.in, src/interp/util.lisp:
+	Adjust.
+
+2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/category.boot, src/interp/util.lisp,
 	src/interp/i-syscmd.boot, src/interp/pathname.boot,
 	src/lisp/fricas-package.lisp: Misc cleanups.
